--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
-<html>
+<!DOCTYPE html>
 
+<html>
+<head>
+  <title>Cici Yu</title>
 <body>
+        <article>
+            <div class="about">
+                <h1>ILENA PENG</h1>
+                <p>
+                    📰 Currently: Podcast Intern at <a href="https://www.wbur.org/">WBUR Radio</a>
+                </p>
+                <p>💻 Toolbox: R for data analysis & R, DataWrapper, Flourish for visualization</p>
+                <p class="sociallinks">
+                    🔗 Find me @CiciYu_ on <a href="https://twitter.com/CiciYu_">Twitter</a>
+                    , <a href="https://www.linkedin.com/in/cici-yu-49b5ab223/">LinkedIn</a>
+                </p>
+
   <h1>Cici Yu</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
