--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 <body>
         <article>
             <div class="about">
-                <h1>ILENA PENG</h1>
+                <h1>Cici Yu</h1>
                 <p>
                     📰 Currently: Podcast Intern at <a href="https://www.wbur.org/">WBUR Radio</a>
                 </p>
+              <p> Past: Health Intern at <a href="https://news.bloomberglaw.com/health-law-and-business/search?query=Cici%20Yu%0A">Bloomberg Law</a></p>
                 <p>💻 Toolbox: R for data analysis & R, DataWrapper, Flourish for visualization</p>
                 <p class="sociallinks">
                     🔗 Find me @CiciYu_ on <a href="https://twitter.com/CiciYu_">Twitter</a>
