--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
                     , <a href="https://www.linkedin.com/in/cici-yu-49b5ab223/">LinkedIn</a>
                 </p>
             </div>
+<div class="highlights">
+<h2>✨ Story Highlights</h2>
 
+<h3><a class='linktitle' href="https://news.bloomberglaw.com/health-law-and-business/opioid-victims-struggle-with-purdue-pharma-settlements-high-bar" target="_blank" rel="noopener noreferrer">Opioid Victims Struggle With Purdue Pharma Settlement’s High Bar</h3>
+  <p>Opioid victims and their families say paperwork and state medical record laws make it hard to prove their claims and get their share of Purdue Pharma's $750 million bankruptcy settlement.<em>– Bloomberg Law, 2023</em></p>
+
+</div>
+          
 </body>
 
 </html>
