--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 <h3><a class='linktitle' href="https://news.bloomberglaw.com/health-law-and-business/opioid-victims-struggle-with-purdue-pharma-settlements-high-bar" target="_blank" rel="noopener noreferrer">Opioid Victims Struggle With Purdue Pharma Settlement’s High Bar</h3>
   <p>Opioid victims and their families say paperwork and state medical record laws make it hard to prove their claims and get their share of Purdue Pharma's $750 million bankruptcy settlement.<em>– Bloomberg Law, 2023</em></p>
 
-<h3><a class='linktitle' href="https://brookline.news/brooklines-tobacco-free-generation-law-facing-challenge-in-mas-highest-court/" target="_blank" rel="noopener noreferrer">Brookline’s tobacco-free generation law facing challenge in MA’s highest court
-</h3>
+<h3><a class='linktitle' href="https://brookline.news/brooklines-tobacco-free-generation-law-facing-challenge-in-mas-highest-court/" target="_blank" rel="noopener noreferrer">Brookline’s tobacco-free generation law facing challenge in MA’s highest court </h3>
   <p>Brookline’s landmark Tobacco Free Generation law, which prohibits the sale of tobacco products to anyone born after January 1, 2000, went to the highest court in Massachusetts last November.<em>– Brookline.News, 2023</em></p>
+
+<h3><a class='linktitle' href="https://digboston.com/photos-dispatch-boston-stands-with-urumqi/" target="_blank" rel="noopener noreferrer">PHOTOS & DISPATCH: BOSTON STANDS WITH ÜRÜMQI </h3>
+  <p>Boston A4 Revolution demonstration: “A summary of the experience that the oppressed Chinese people have been going through for so long and their strong desire to come out as who they are.” <em>– DigBoston, 2022</em></p>
 
 
 </div>
