--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me - Journalist Portfolio</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="resource/css/style.css">
 </head>
 <body>
   <header class="container text-center my-5">
@@ -19,8 +19,19 @@
   </header>
 
   <section class="container my-5">
-    <h2>About Me</h2>
-    <p>Details about the journalist...</p>
+    <h2>About Cici</h2>
+    <div class="row">
+      <!-- Column for image -->
+      <div class="col-md-4">
+        <img src="resource/images/headshot.jpg" alt="Cici" class="img-fluid img-thumbnail">
+      </div>
+      <!-- Column for text -->
+      <div class="col-md-8">
+        <p>Cici is a data-driven public health reporter adept at transforming raw statistics into compelling visual narratives. Proficient in R, Excel, DataWrapper, and Flourish to code interactive charts, maps, and graphics. I am seeking to leverage my expertise in health reporting and data visualization to engage audiences with visual data stories. Cici is currently the podcast fellow at WBUR, producing daily news episodes for THE COMMON.</p>
+        <a href="https://drive.google.com/file/d/1lch9-u0DOUgSNp_2UGk0iRaWtXKu1yx7/view" class="btn btn-primary" target="_blank">View My Resume</a>
+      </div>
+      </div>
+    </div>
   </section>
 
   <footer class="container text-center my-5">
@@ -28,3 +39,5 @@
   </footer>
 </body>
 </html>
+
+
