--- a/writing.html
+++ b/writing.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cici's Writing</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="resource/css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="container text-center my-5">
