--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <div class="row">
       <!-- Column for image -->
       <div class="col-md-4">
-        <img src="resource/images/headshot.jpg" alt="Cici" class="img-fluid img-thumbnail">
+        <img src="headshot.jpg" alt="Cici" class="img-fluid img-thumbnail">
       </div>
       <!-- Column for text -->
       <div class="col-md-8">
