--- a/index.html
+++ b/index.html
@@ -88,16 +88,15 @@
         </div>
       </div>
 
-      <div class="col-md-4">
+     <div class="col-md-4">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Title 6</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Publication 6</h6>
-            <p class="card-text">Description of the sixth work.</p>
+            <h5 class="card-title">COMING SOON: APPLE VISION PRO</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Endless Thread/WBUR Boston</h6>
+            <p class="card-text">A long form narrative podcast episode about the dynamic journey of virtual reality's rise and falls in popularity, discussing whether the Apple Vision Pro will continue to captivate and retain its place in our digital lives. </p>
             <a href="#" class="btn btn-primary">Read More</a>
           </div>
         </div>
-      </div>
 
     </div>
   </section>
