--- a/podcasting.html
+++ b/podcasting.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Podcasting - Journalist Portfolio</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="resource/css/style.css">
 </head>
 <body>
   <header class="container text-center my-5">
-    <h1>Podcasting</h1>
+    <h1>Cici's Audio Packages</h1>
     <nav class="nav justify-content-center">
       <a class="nav-link" href="index.html">Home</a>
       <a class="nav-link" href="writing.html">Writing</a>
@@ -20,7 +20,7 @@
 
   <section class="container my-5">
     <h2>As a producer...</h2>
-    <p>Here are some examples of my podcasting work.</p>
+    <p>I am currently booking, scripting and producing for WBUR Boston's daily news podcast <strong>The Common</strong> and the online-community-focused podcast <strong>Endless Thread</strong>. Here are some examples of my podcasting work.</p>
     <!-- Embedded podcast episode -->
     <iframe width="100%" height="124" scrolling="no" frameborder="no" src="https://player.wbur.org/the-common/2024/02/16/lunar-new-year-dragon-boston"></iframe>
     <iframe width="100%" height="124" scrolling="no" frameborder="no" src="https://player.wbur.org/the-common/2024/01/26/book-bans-in-massachusetts-public-schools"></iframe>
