--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
   <section class="container my-5">
     <h2>About Me</h2>
-    <p>📰 Currently: Podcast Intern at WBUR Radio</p>
-    <p>🗞 Past: Health Intern at Bloomberg Law</p>
-    <p>💻 Toolbox: R for data analysis; R, DataWrapper, Flourish for visualization</p>
+    <p>📰 Currently: Associate Producer @WBUR </p>
+    <p>🗞 Past: Podcast Fellow at WBUR; Health Intern at Bloomberg Law</p>
+    <p>💻 Toolbox: Audition, Descript for audio editing; R for data analysis; R, DataWrapper, Flourish for visualization</p>
     <p>🔗 Find me @CiciYu_ on <a href="https://twitter.com/CiciYu_">Twitter</a>
       , <a href="https://www.linkedin.com/in/cici-yu-49b5ab223/">LinkedIn</a></p>
   </section>
