--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       </div>
       <!-- Column for text -->
       <div class="col-md-8">
-        <p>Cici is a data-driven public health reporter adept at transforming raw statistics into compelling visual narratives. Proficient in R, Excel, DataWrapper, and Flourish to code interactive charts, maps, and graphics. I am seeking to leverage my expertise in health reporting and data visualization to engage audiences with visual data stories. Cici is currently the podcast fellow at WBUR, producing daily news episodes for THE COMMON.</p>
+        <p>Cici is currently working as an associate producer for WBUR’s Morning Edition show. Previously, she was the podcast fellow at WBUR, producing daily news episodes for The Common and internet-focus narrative podcast Endless Thread. She is also interested in public health reporting and data visualization. Outside of work, she enjoys rock climbing and traveling. </p>
         <a href="https://drive.google.com/file/d/1lch9-u0DOUgSNp_2UGk0iRaWtXKu1yx7/view" class="btn btn-primary" target="_blank">View My Resume</a>
       </div>
       </div>
